tela de criação de quizes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,105 @@
 
 <body>
 
-
-
+    <section>
+        <header>
+            <h1>BuzzQuizz</h1>
+        </header>
+        <h4>Comece pelo começo</h4>
+        <form>
+            <!--first form-->
+            <div class="title-form">
+                <h4>Pergunta 1</h4>
+                <ion-icon name="open-outline" id="open-icon"></ion-icon>
+            </div>
+            <input type="text" id="iquestion" placeholder="Texto da pergunta">
+            <input type="text" id="ibackground" placeholder="Cor de fundo da pergunta">
+            <!--second form-->
+            <div class="title-form">
+                <h4>Resposta correta</h4>
+            </div>
+            <input type="text" id="ianswer" placeholder="Resposta correta">
+            <input type="text" placeholder="URL da imagem">
+            <!--third form-->
+            <div class="title-form">
+                <h4>Respostas incorretas</h4>
+            </div>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 1">
+            <input type="text" id="iwrong-answer-url" placeholder="URL da imagem 1">
+            <br>
+            <br>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 2">
+            <input type="text" id="iwrong-answer" placeholder="URL da imagem 2">
+            <br>
+            <br>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 3">
+            <input type="text" id="iwrong-answer" placeholder="URL da imagem 3">
+            <br>
+            <br>
+        </form>
+        <form>
+            <!--first form-->
+            <div class="title-form">
+                <h4>Pergunta 1</h4>
+                <ion-icon name="open-outline" id="open-icon"></ion-icon>
+            </div>
+            <input type="text" id="iquestion" placeholder="Texto da pergunta">
+            <input type="text" id="ibackground" placeholder="Cor de fundo da pergunta">
+            <!--second form-->
+            <div class="title-form">
+                <h4>Resposta correta</h4>
+            </div>
+            <input type="text" id="ianswer" placeholder="Resposta correta">
+            <input type="text" placeholder="URL da imagem">
+            <!--third form-->
+            <div class="title-form">
+                <h4>Respostas incorretas</h4>
+            </div>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 1">
+            <input type="text" id="iwrong-answer-url" placeholder="URL da imagem 1">
+            <br>
+            <br>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 2">
+            <input type="text" id="iwrong-answer" placeholder="URL da imagem 2">
+            <br>
+            <br>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 3">
+            <input type="text" id="iwrong-answer" placeholder="URL da imagem 3">
+            <br>
+            <br>
+        </form><form>
+            <!--first form-->
+            <div class="title-form">
+                <h4>Pergunta 1</h4>
+                <ion-icon name="open-outline" id="open-icon"></ion-icon>
+            </div>
+            <input type="text" id="iquestion" placeholder="Texto da pergunta">
+            <input type="text" id="ibackground" placeholder="Cor de fundo da pergunta">
+            <!--second form-->
+            <div class="title-form">
+                <h4>Resposta correta</h4>
+            </div>
+            <input type="text" id="ianswer" placeholder="Resposta correta">
+            <input type="text" placeholder="URL da imagem">
+            <!--third form-->
+            <div class="title-form">
+                <h4>Respostas incorretas</h4>
+            </div>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 1">
+            <input type="text" id="iwrong-answer-url" placeholder="URL da imagem 1">
+            <br>
+            <br>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 2">
+            <input type="text" id="iwrong-answer" placeholder="URL da imagem 2">
+            <br>
+            <br>
+            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 3">
+            <input type="text" id="iwrong-answer" placeholder="URL da imagem 3">
+            <br>
+            <br>
+        </form>
+    </section>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts.js"></script>
 </body>
