--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <section>
+    <section id="creation-quizz">
         <header>
             <h1>BuzzQuizz</h1>
         </header>
@@ -83,7 +83,8 @@
             <input type="text" id="iwrong-answer" placeholder="URL da imagem 3">
             <br>
             <br>
-        </form><form>
+        </form>
+        <form>
             <!--first form-->
             <div class="title-form">
                 <h4>Pergunta 1</h4>
@@ -115,6 +116,9 @@
             <br>
         </form>
     </section>
+    <div id="btn-container">
+        <button id="finish-btn">Finalizar quiz</button>
+    </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts.js"></script>
