Criando tela de lista do quizzes (versão desktop/mobile)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,88 @@
 
 <body>
 
+    <!--Começo - HTML Barci-->
+    <div class="screen-list-quizzes">
+        <header>
+            <h1>BuzzQuizz</h1>
+        </header>
+        <main>
+            <section class="area-creation-quizz">
+                <p>Você não criou nenhum quizz ainda :(</p>
+                <button>Criar Quizz</button>
+            </section>
+            <section class="area-my-quizzes">
+                <div>
+                    <p>Seus Quizzes</p>
+                    <button>
+                        <img src="imagens/Vector.png"/>
+                    </button>
+                </div>
+
+                <div class="my-quizzes">
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="area-all-quizzes">
+                <p>Todos os Quizzes</p>
+                <div>
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+
+                    <div class="card-quizz">
+                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+
+
+    <!--Fim - HTML Barci-->
+
+
+    <!--Começo - HTML Yves-->
     <section id="creation-quizz">
         <header>
             <h1>BuzzQuizz</h1>
@@ -119,9 +201,10 @@
     <div id="btn-container">
         <button id="finish-btn">Finalizar quiz</button>
     </div>
+    <!--Fim - HTML Yves-->
 
 
-    
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts.js"></script>
