Criação da página do quizz

--- a/index.html
+++ b/index.html
@@ -16,9 +16,60 @@
 </head>
 
 <body>
-
-
-
+    <!--Começo - Fernando HTML-->
+    <!--quizz page screen-->
+    <div class="tela-quizz active">
+        <div class="flex">
+        <header><h1>BuzzQuizz</h1></header>        
+            <section class="questions">
+            <div class="title-quizz"><h2>O quão Potterhead é você?</h2></div>
+                <!--question 1-->
+                <div class="question-box">
+                    <div class="question-title">Perguntinha aqui?</div>
+                    <div class="answers disabled">
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo</p></div>
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
+                        <div class="" id="correct" ><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
+                    </div>
+                </div>
+                <!--question 2-->
+                <div class="question-box">
+                    <div class="question-title">Perguntinha aqui?</div>
+                    <div class="answers">
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo</p></div>
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
+                    </div>
+                </div>
+                <!--question 3-->
+                <div class="question-box">
+                    <div class="question-title">Perguntinha aqui?</div>
+                    <div class="answers">
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo</p></div>
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
+                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
+                    </div>
+                </div>
+                <!--quizz results-->
+                <div class="results-box">
+                    <div class="results-title">XX% de acerto: parabéns, você reprovou no buzzfeed de Harry Potter.</div>
+                    <div class="results-content">
+                        <img src="imagens/results.png" alt="">
+                        <p>Parabéns Potterhead! Bem-vindx a Hogwarts, aproveite o loop infinito de comida e clique no botão abaixo para usar o vira-tempo e reiniciar este teste. </p>
+                    </div>
+                </div>
+                <!--quizz restart/exit-->
+                <div class="quizz-end">
+                    <button class="button-quizz-restart">Reiniciar Quizz</button>
+                    <button class="button-quizz-exit">Voltar pra home</button>
+                </div>
+            </section>
+        </div>                  
+    </div>
+    <!--Fim - Fernando HTML-->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts.js"></script>
 </body>
