Página quizz e quizz mobile corrigidas

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <body>
     <!--Começo - Fernando HTML-->
     <!--quizz page screen-->
-    <div class="tela-quizz">
-        <div class="flex">
+    <div class="screen-quizz">
         <header><h1>BuzzQuizz</h1></header>        
             <section class="questions">
             <div class="title-quizz"><h2>O quão Potterhead é você?</h2></div>
@@ -27,17 +26,17 @@
                 <div class="question-box">
                     <div class="question-title">Perguntinha aqui?</div>
                     <div class="answers disabled">
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo</p></div>
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
-                        <div class="" id="correct" ><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
+                        <div class="option"><img src="imagens/answers.png" alt=""><p>Gatíneo</p></div>
+                        <div class="option"><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
+                        <div class="option"><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
+                        <div class="option" id="correct" ><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
                     </div>
                 </div>
                 <!--question 2-->
                 <div class="question-box">
                     <div class="question-title">Perguntinha aqui?</div>
                     <div class="answers">
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo</p></div>
+                        <div class=""><img src="" alt=""><p>Gatíneo</p></div>
                         <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
                         <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
                         <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
@@ -66,8 +65,7 @@
                     <button class="button-quizz-restart">Reiniciar Quizz</button>
                     <button class="button-quizz-exit">Voltar pra home</button>
                 </div>
-            </section>
-        </div>                  
+            </section>       
     </div>
     <!--Fim - Fernando HTML-->
 
