--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
     <!--Fim - HTML Barci-->
 
     <!--Começo - HTML Yves-->
-    <!--creation quizz screen-->
     <section id="creation-quizz">
         <header>
             <h1>BuzzQuizz</h1>
@@ -252,6 +251,47 @@
         <div id="btn-container">
             <button id="finish-btn">Finalizar quiz</button>
         </div>
+    </section>
+
+    <section id="quizzlvl">
+        <header>
+            <h1>BuzzQuizz</h1>
+        </header>
+        <h4>Agora, decida os níveis</h4>
+        <form>
+            <!--first level form-->
+            <div class="title-form">
+                <h4>Nível 1</h4>
+                <ion-icon name="open-outline" id="open-icon"></ion-icon>
+            </div>
+            <input type="text" id="ilvl-title" placeholder="Titulo do nível">
+            <input type="text" id="ipercent-min" placeholder="Porcentagem de acerto mínima">
+            <input type="text" id="percent-url" placeholder="URL da imagem do nível">
+            <textarea id="lvl-description" cols="30" rows="10"></textarea>
+        </form>
+            <!--second level form-->
+            <form>
+                <div class="title-form">
+                    <h4>Nível 2</h4>
+                    <ion-icon name="open-outline" id="open-icon"></ion-icon>
+                </div>
+                <input type="text" id="ilvl-title2" placeholder="Titulo do nível">
+                <input type="text" id="ipercent-min2" placeholder="Porcentagem de acerto mínima">
+                <input type="text" id="percent-url2" placeholder="URL da imagem do nível">
+                <textarea id="lvl-description2" cols="30" rows="10"></textarea>
+            </form> <!--third level form-->
+        <form>
+            <div class="title-form">
+                <h4>Nível 3</h4>
+                <ion-icon name="open-outline" id="open-icon"></ion-icon>
+            </div>
+            <input type="text" id="ilvl-title3" placeholder="Titulo do nível">
+            <input type="text" id="ipercent-min3" placeholder="Porcentagem de acerto mínima">
+            <input type="text" id="percent-url3" placeholder="URL da imagem do nível">
+            <textarea id="lvl-description3" cols="30" rows="10"></textarea>
+        </form>
+
+
     </section>
     <!--Fim - HTML Yves-->
 
