--- a/index.html
+++ b/index.html
@@ -291,6 +291,24 @@
 
 
     </section>
+
+    <section id="done-quizz">
+        <header>
+            <h1>BuzzQuizz</h1>
+        </header>
+        <h4>Seu quizz esta] pronto</h4>
+        <div id="background-container">
+            <div id="background"></div>
+        </div>
+        <div id="btn-container">
+            <button id="send-quizzbtn" class="btn">
+                Acessar Quizz
+            </button>
+            <button id="cancel-quizzbtn" class="btn">
+                Voltar para home
+            </button>
+        </div>
+    </section>
     <!--Fim - HTML Yves-->
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
