Adicionando tela de informações iniciais dos quizzes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,28 @@
                     <div class="card-quizz">
                         <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
                     </div>
+
                 </div>
+            </section>
+        </main>
+    </div>
+
+
+
+    <div class="info-quizz active">
+        <header>
+            <h1>BuzzQuizz</h1>
+        </header>
+        <main>
+            <section class="form-info">
+                <h2>Crie suas perguntas</h2>
+                <form>
+                    <input placeholder="Título do seu quizz"/>
+                    <input placeholder="URL da imagem do seu quizz"/>
+                    <input placeholder="Quantidade de perguntas do quizz"/>
+                    <input placeholder="Quantidade de níveis do quizz"/>
+                </form>
+                <button>Prosseguir pra criar perguntas</button>
             </section>
         </main>
     </div>
@@ -196,10 +217,10 @@
             <br>
             <br>
         </form>
+        <div id="btn-container">
+            <button id="finish-btn">Finalizar quiz</button>
+        </div>
     </section>
-    <div id="btn-container">
-        <button id="finish-btn">Finalizar quiz</button>
-    </div>
     <!--Fim - HTML Yves-->
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
