--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <main>
             <section class="area-creation-quizz">
                 <p>Você não criou nenhum quizz ainda :(</p>
-                <button>Criar Quizz</button>
+                <button onclick="mudarTela('.info-quizz');">Criar Quizz</button>
             </section>
             <section class="area-my-quizzes">
                 <div>
                     <p>Seus Quizzes</p>
-                    <button>
+                    <button onclick="mudarTela('.info-quizz');">
                         <img src="imagens/Vector.png"/>
                     </button>
                 </div>
@@ -118,30 +118,6 @@
             <section class="area-all-quizzes">
                 <p>Todos os Quizzes</p>
                 <div>
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
                 </div>
             </section>
         </main>
