Correção de bugs no CSS da página inicial/Adição de novas funções referentes a exibição da lista de quizzes na página inicial

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <main>
             <section class="area-creation-quizz">
                 <p>Você não criou nenhum quizz ainda :(</p>
-                <button onclick="mudarTela('.info-quizz');">Criar Quizz</button>
+                <button onclick="criarQuiz();">Criar Quizz</button>
             </section>
             <section class="area-my-quizzes">
                 <div>
@@ -111,7 +111,6 @@
                     <div class="card-quizz">
                         <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
                     </div>
-
                 </div>
             </section>
 
