--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
             <h1>BuzzQuizz</h1>
         </header>
         <h4>Comece pelo começo</h4>
-        <form>
+        <form class="question1">
             <!--first form-->
             <div class="title-form">
                 <h4>Pergunta 1</h4>
                 <ion-icon name="open-outline" id="open-icon"></ion-icon>
             </div>
-            <input type="text" id="iquestion" placeholder="Texto da pergunta">
-            <input type="text" id="ibackground" placeholder="Cor de fundo da pergunta">
+            <input type="text" id="iquestion1" placeholder="Texto da pergunta">
+            <input type="text" id="ibackground1" placeholder="Cor de fundo da pergunta">
             <!--second form-->
             <div class="title-form">
                 <h4>Resposta correta</h4>
@@ -179,14 +179,14 @@
             <br>
             <br>
         </form>
-        <form>
+        <form class="question2">
             <!--first form-->
             <div class="title-form">
                 <h4>Pergunta 1</h4>
                 <ion-icon name="open-outline" id="open-icon"></ion-icon>
             </div>
-            <input type="text" id="iquestion" placeholder="Texto da pergunta">
-            <input type="text" id="ibackground" placeholder="Cor de fundo da pergunta">
+            <input type="text" id="iquestion2" placeholder="Texto da pergunta">
+            <input type="text" id="ibackground2" placeholder="Cor de fundo da pergunta">
             <!--second form-->
             <div class="title-form">
                 <h4>Resposta correta</h4>
@@ -210,14 +210,14 @@
             <br>
             <br>
         </form>
-        <form>
+        <form class="question3">
             <!--first form-->
             <div class="title-form">
                 <h4>Pergunta 1</h4>
                 <ion-icon name="open-outline" id="open-icon"></ion-icon>
             </div>
-            <input type="text" id="iquestion" placeholder="Texto da pergunta">
-            <input type="text" id="ibackground" placeholder="Cor de fundo da pergunta">
+            <input type="text" id="iquestion3" placeholder="Texto da pergunta">
+            <input type="text" id="ibackground3" placeholder="Cor de fundo da pergunta">
             <!--second form-->
             <div class="title-form">
                 <h4>Resposta correta</h4>
@@ -240,7 +240,7 @@
             <input type="text" id="iwrong-answer" placeholder="URL da imagem 3">
             <br>
             <br>
-        </form>
+        </form class="question4">
         <div id="btn-container">
             <button id="finish-btn">Finalizar quiz</button>
         </div>
