verificação de inputs

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </main>
     </div>
 
-    <div class="info-quizz">
+    <div class="info-quizz active">
         <header>
             <h1>BuzzQuizz</h1>
         </header>
@@ -135,113 +135,113 @@
                     <input placeholder="Quantidade de perguntas do quizz"/>
                     <input placeholder="Quantidade de níveis do quizz"/>
                 </form>
-                <button>Prosseguir pra criar perguntas</button>
+                <button onclick="inputsCheio('#creation-quizz')">Prosseguir pra criar perguntas</button>
             </section>
         </main>
     </div>
     <!--Fim - HTML Barci-->
 
     <!--Começo - HTML Yves-->
-    <section id="creation-quizz">
+    <section id="creation-quizz" class="active">
         <header>
             <h1>BuzzQuizz</h1>
         </header>
         <h4>Comece pelo começo</h4>
-        <form class="question1">
+        <form class="question">
             <!--first form-->
             <div class="title-form">
                 <h4>Pergunta 1</h4>
                 <ion-icon name="open-outline" id="open-icon"></ion-icon>
             </div>
-            <input type="text" id="iquestion1" placeholder="Texto da pergunta">
-            <input type="text" id="ibackground1" placeholder="Cor de fundo da pergunta">
+            <input type="text" placeholder="Texto da pergunta">
+            <input type="text" placeholder="Cor de fundo da pergunta">
             <!--second form-->
             <div class="title-form">
                 <h4>Resposta correta</h4>
             </div>
-            <input type="text" id="ianswer" placeholder="Resposta correta">
+            <input type="text" placeholder="Resposta correta">
             <input type="text" placeholder="URL da imagem">
             <!--third form-->
             <div class="title-form">
                 <h4>Respostas incorretas</h4>
             </div>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 1">
-            <input type="text" id="iwrong-answer-url" placeholder="URL da imagem 1">
+            <input type="text" placeholder="Resposta incorreta 1">
+            <input type="text" placeholder="URL da imagem 1">
             <br>
             <br>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 2">
-            <input type="text" id="iwrong-answer" placeholder="URL da imagem 2">
+            <input type="text" placeholder="Resposta incorreta 2">
+            <input type="text" placeholder="URL da imagem 2">
             <br>
             <br>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 3">
-            <input type="text" id="iwrong-answer" placeholder="URL da imagem 3">
+            <input type="text" placeholder="Resposta incorreta 3">
+            <input type="text" placeholder="URL da imagem 3">
             <br>
             <br>
         </form>
-        <form class="question2">
+        <form class="question">
             <!--first form-->
             <div class="title-form">
-                <h4>Pergunta 1</h4>
+                <h4>pergunta 2</h4>
                 <ion-icon name="open-outline" id="open-icon"></ion-icon>
             </div>
-            <input type="text" id="iquestion2" placeholder="Texto da pergunta">
-            <input type="text" id="ibackground2" placeholder="Cor de fundo da pergunta">
+            <input type="text" placeholder="Texto da pergunta">
+            <input type="text" placeholder="Cor de fundo da pergunta">
             <!--second form-->
             <div class="title-form">
                 <h4>Resposta correta</h4>
             </div>
-            <input type="text" id="ianswer" placeholder="Resposta correta">
+            <input type="text" placeholder="Resposta correta">
             <input type="text" placeholder="URL da imagem">
             <!--third form-->
             <div class="title-form">
                 <h4>Respostas incorretas</h4>
             </div>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 1">
-            <input type="text" id="iwrong-answer-url" placeholder="URL da imagem 1">
+            <input type="text"  placeholder="Resposta incorreta 1">
+            <input type="text"  placeholder="URL da imagem 1">
             <br>
             <br>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 2">
-            <input type="text" id="iwrong-answer" placeholder="URL da imagem 2">
+            <input type="text"  placeholder="Resposta incorreta 2">
+            <input type="text"  placeholder="URL da imagem 2">
             <br>
             <br>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 3">
-            <input type="text" id="iwrong-answer" placeholder="URL da imagem 3">
+            <input type="text"  placeholder="Resposta incorreta 3">
+            <input type="text"  placeholder="URL da imagem 3">
             <br>
             <br>
         </form>
-        <form class="question3">
+        <form class="question">
             <!--first form-->
             <div class="title-form">
-                <h4>Pergunta 1</h4>
+                <h4>Pergunta 3</h4>
                 <ion-icon name="open-outline" id="open-icon"></ion-icon>
             </div>
-            <input type="text" id="iquestion3" placeholder="Texto da pergunta">
-            <input type="text" id="ibackground3" placeholder="Cor de fundo da pergunta">
+            <input type="text" placeholder="Texto da pergunta">
+            <input type="text" placeholder="Cor de fundo da pergunta">
             <!--second form-->
             <div class="title-form">
                 <h4>Resposta correta</h4>
             </div>
-            <input type="text" id="ianswer" placeholder="Resposta correta">
+            <input type="text" placeholder="Resposta correta">
             <input type="text" placeholder="URL da imagem">
             <!--third form-->
             <div class="title-form">
                 <h4>Respostas incorretas</h4>
             </div>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 1">
-            <input type="text" id="iwrong-answer-url" placeholder="URL da imagem 1">
+            <input type="text" placeholder="Resposta incorreta 1">
+            <input type="text" placeholder="URL da imagem 1">
             <br>
             <br>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 2">
-            <input type="text" id="iwrong-answer" placeholder="URL da imagem 2">
+            <input type="text" placeholder="Resposta incorreta 2">
+            <input type="text" placeholder="URL da imagem 2">
             <br>
             <br>
-            <input type="text" id="iwrong-answer" placeholder="Resposta incorreta 3">
-            <input type="text" id="iwrong-answer" placeholder="URL da imagem 3">
+            <input type="text" placeholder="Resposta incorreta 3">
+            <input type="text" placeholder="URL da imagem 3">
             <br>
             <br>
-        </form class="question4">
+        </form>
         <div id="btn-container">
-            <button id="finish-btn">Finalizar quiz</button>
+            <button id="finish-btn" onclick="finishQuizz()">Finalizar quiz</button>
         </div>
     </section>
 
@@ -256,10 +256,10 @@
                 <h4>Nível 1</h4>
                 <ion-icon name="open-outline" id="open-icon"></ion-icon>
             </div>
-            <input type="text" id="ilvl-title" placeholder="Titulo do nível">
-            <input type="text" id="ipercent-min" placeholder="Porcentagem de acerto mínima">
-            <input type="text" id="percent-url" placeholder="URL da imagem do nível">
-            <textarea id="lvl-description" cols="30" rows="10"></textarea>
+            <input type="text" placeholder="Titulo do nível">
+            <input type="text" placeholder="Porcentagem de acerto mínima">
+            <input type="text" placeholder="URL da imagem do nível">
+            <textarea class="text-box" cols="30" rows="10"></textarea>
         </form>
             <!--second level form-->
             <form>
@@ -267,20 +267,20 @@
                     <h4>Nível 2</h4>
                     <ion-icon name="open-outline" id="open-icon"></ion-icon>
                 </div>
-                <input type="text" id="ilvl-title2" placeholder="Titulo do nível">
-                <input type="text" id="ipercent-min2" placeholder="Porcentagem de acerto mínima">
-                <input type="text" id="percent-url2" placeholder="URL da imagem do nível">
-                <textarea id="lvl-description2" cols="30" rows="10"></textarea>
+                <input type="text" placeholder="Titulo do nível">
+                <input type="text" placeholder="Porcentagem de acerto mínima">
+                <input type="text" placeholder="URL da imagem do nível">
+                <textarea class="text-box" cols="30" rows="10"></textarea>
             </form> <!--third level form-->
         <form>
             <div class="title-form">
                 <h4>Nível 3</h4>
                 <ion-icon name="open-outline" id="open-icon"></ion-icon>
             </div>
-            <input type="text" id="ilvl-title3" placeholder="Titulo do nível">
-            <input type="text" id="ipercent-min3" placeholder="Porcentagem de acerto mínima">
-            <input type="text" id="percent-url3" placeholder="URL da imagem do nível">
-            <textarea id="lvl-description3" cols="30" rows="10"></textarea>
+            <input type="text" placeholder="Titulo do nível">
+            <input type="text" placeholder="Porcentagem de acerto mínima">
+            <input type="text" placeholder="URL da imagem do nível">
+            <textarea class="text-box" cols="30" rows="10"></textarea>
         </form>
 
     </section>
