tela 3.1 transição de tela finalizada

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
             <section class="form-info">
                 <h2>Crie suas perguntas</h2>
                 <form>
-                    <input placeholder="Título do seu quizz"/>
+                    <input placeholder="Título do seu quizz" minlength="20" maxlength="65"/>
                     <input placeholder="URL da imagem do seu quizz"/>
                     <input placeholder="Quantidade de perguntas do quizz"/>
-                    <input placeholder="Quantidade de níveis do quizz"/>
+                    <input placeholder="Quantidade de níveis do quizz" />
                 </form>
-                <button onclick="inputsCheio('#creation-quizz')">Prosseguir pra criar perguntas</button>
+                <button onclick="inputsCheio()">Prosseguir pra criar perguntas</button>
             </section>
         </main>
     </div>
