Versão com tela de quizz funcional

--- a/index.html
+++ b/index.html
@@ -20,50 +20,18 @@
     <!--quizz page screen-->
     <div class="screen-quizz">
         <header><h1>BuzzQuizz</h1></header>        
-            <section class="questions">
-            <div class="title-quizz"><h2>O quão Potterhead é você?</h2></div>
-                <!--question 1-->
-                <div class="question-box">
-                    <div class="question-title">Perguntinha aqui?</div>
-                    <div class="answers disabled">
-                        <div class="option"><img src="imagens/answers.png" alt=""><p>Gatíneo</p></div>
-                        <div class="option"><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
-                        <div class="option"><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
-                        <div class="option" id="correct" ><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
-                    </div>
+            <section class="content-quizz">
+            <div class="title-quizz"><h2></h2></div>                
+                <div class="questions">
+                <!--quizz questions content-->
                 </div>
-                <!--question 2-->
-                <div class="question-box">
-                    <div class="question-title">Perguntinha aqui?</div>
-                    <div class="answers">
-                        <div class=""><img src="" alt=""><p>Gatíneo</p></div>
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
-                    </div>
-                </div>
-                <!--question 3-->
-                <div class="question-box">
-                    <div class="question-title">Perguntinha aqui?</div>
-                    <div class="answers">
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo</p></div>
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 2</p></div>
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 3</p></div>
-                        <div class=""><img src="imagens/answers.png" alt=""><p>Gatíneo 4</p></div>
-                    </div>
-                </div>
-                <!--quizz results-->
                 <div class="results-box">
-                    <div class="results-title">XX% de acerto: parabéns, você reprovou no buzzfeed de Harry Potter.</div>
-                    <div class="results-content">
-                        <img src="imagens/results.png" alt="">
-                        <p>Parabéns Potterhead! Bem-vindx a Hogwarts, aproveite o loop infinito de comida e clique no botão abaixo para usar o vira-tempo e reiniciar este teste. </p>
-                    </div>
+                <!--quizz results content-->                    
                 </div>
                 <!--quizz restart/exit-->
                 <div class="quizz-end">
-                    <button class="button-quizz-restart">Reiniciar Quizz</button>
-                    <button class="button-quizz-exit">Voltar pra home</button>
+                    <button class="button-quizz-restart" onclick="reiniciarQuizz()">Reiniciar Quizz</button>
+                    <button class="button-quizz-exit" onclick="location.reload()">Voltar pra home</button>
                 </div>
             </section>       
     </div>
