--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
     <!--Fim - Fernando HTML-->
 
     <!--Começo - HTML Barci-->
+    <div class="screen-loading">
+        <header>
+            <h1>BuzzQuizz</h1>
+        </header>
+        <section>
+            <img src="imagens/Loading-spin.gif"/>
+            <p>Carregando</p>
+        </section>
+    </div>
+
+
+
     <div class="screen-list-quizzes">
         <header>
             <h1>BuzzQuizz</h1>
@@ -90,6 +102,10 @@
                 <div class="my-quizzes">
                     <div class="card-quizz">
                         <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
+                        <div class="options-quizzes">
+                            <img src="imagens/Edit.png"/>
+                            <img src="imagens/Trash.png"/>
+                        </div>
                     </div>
 
                     <div class="card-quizz">
