--- a/index.html
+++ b/index.html
@@ -16,7 +16,47 @@
 </head>
 
 <body>
-    <!--Começo - Fernando HTML-->
+
+    <!--Começo - HTML TELA 1-->
+    <div class="screen-loading">
+        <header>
+            <h1>BuzzQuizz</h1>
+        </header>
+        <section>
+            <img src="imagens/Loading-spin.gif"/>
+            <p>Carregando</p>
+        </section>
+    </div>
+
+    <div class="screen-list-quizzes">
+        <header>
+            <h1>BuzzQuizz</h1>
+        </header>
+        <main>
+            <section class="area-creation-quizz">
+                <p>Você não criou nenhum quizz ainda :(</p>
+                <button onclick="mudarTela('.info-quizz');">Criar Quizz</button>
+            </section>
+            <section class="area-my-quizzes">
+                <div>
+                    <p>Seus Quizzes</p>
+                    <button onclick="mudarTela('.info-quizz');">
+                        <img src="imagens/Vector.png"/>
+                    </button>
+                </div>
+                <div class="my-quizzes"></div>
+            </section>
+
+            <section class="area-all-quizzes">
+                <p>Todos os Quizzes</p>
+                <div>
+                </div>
+            </section>
+        </main>
+    </div>
+    <!--Fim - HTML TELA 1-->
+
+    <!--Começo - HTML TELA 2-->
     <!--quizz page screen-->
     <div class="screen-quizz">
         <header><h1>BuzzQuizz</h1></header>        
@@ -35,77 +75,9 @@
                 </div>
             </section>       
     </div>
-    <!--Fim - Fernando HTML-->
+    <!--Fim - HTML TELA 2-->
 
-    <!--Começo - HTML Barci-->
-    <div class="screen-loading">
-        <header>
-            <h1>BuzzQuizz</h1>
-        </header>
-        <section>
-            <img src="imagens/Loading-spin.gif"/>
-            <p>Carregando</p>
-        </section>
-    </div>
-
-
-
-    <div class="screen-list-quizzes">
-        <header>
-            <h1>BuzzQuizz</h1>
-        </header>
-        <main>
-            <section class="area-creation-quizz">
-                <p>Você não criou nenhum quizz ainda :(</p>
-                <button onclick="criarQuiz();">Criar Quizz</button>
-            </section>
-            <section class="area-my-quizzes">
-                <div>
-                    <p>Seus Quizzes</p>
-                    <button onclick="mudarTela('.info-quizz');">
-                        <img src="imagens/Vector.png"/>
-                    </button>
-                </div>
-
-                <div class="my-quizzes">
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                        <div class="options-quizzes">
-                            <img src="imagens/Edit.png"/>
-                            <img src="imagens/Trash.png"/>
-                        </div>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-
-                    <div class="card-quizz">
-                        <h2>Acerte os personagens corretos dos Simpsons e prove seu amor!</h2>
-                    </div>
-                </div>
-            </section>
-
-            <section class="area-all-quizzes">
-                <p>Todos os Quizzes</p>
-                <div>
-                </div>
-            </section>
-        </main>
-    </div>
-
+    <!--Começo - HTML TELA 3.1-->
     <div class="info-quizz">
         <header>
             <h1>BuzzQuizz</h1>
@@ -119,174 +91,51 @@
                     <input placeholder="Quantidade de perguntas do quizz"/>
                     <input placeholder="Quantidade de níveis do quizz" />
                 </form>
-                <button onclick="inputsCheio()">Prosseguir pra criar perguntas</button>
+                <button onclick="informacoesIniciaisQuiz('.creation-quizz');">Prosseguir pra criar perguntas</button>
             </section>
         </main>
     </div>
-    <!--Fim - HTML Barci-->
+    <!--Fim - HTML TELA 3.1-->
 
-    <!--Começo - HTML Yves-->
-    <section id="creation-quizz" class="active">
+    <!--Começo - HTML TELA 3.2-->
+    <div class="creation-quizz">
         <header>
             <h1>BuzzQuizz</h1>
         </header>
-        <h4>Comece pelo começo</h4>
-        <form class="question">
-            <!--first form-->
-            <div class="title-form">
-                <h4>Pergunta 1</h4>
-                <ion-icon name="open-outline" id="open-icon"></ion-icon>
-            </div>
-            <input type="text" placeholder="Texto da pergunta">
-            <input type="text" placeholder="Cor de fundo da pergunta">
-            <!--second form-->
-            <div class="title-form">
-                <h4>Resposta correta</h4>
-            </div>
-            <input type="text" placeholder="Resposta correta">
-            <input type="text" placeholder="URL da imagem">
-            <!--third form-->
-            <div class="title-form">
-                <h4>Respostas incorretas</h4>
-            </div>
-            <input type="text" placeholder="Resposta incorreta 1">
-            <input type="text" placeholder="URL da imagem 1">
-            <br>
-            <br>
-            <input type="text" placeholder="Resposta incorreta 2">
-            <input type="text" placeholder="URL da imagem 2">
-            <br>
-            <br>
-            <input type="text" placeholder="Resposta incorreta 3">
-            <input type="text" placeholder="URL da imagem 3">
-            <br>
-            <br>
-        </form>
-        <form class="question">
-            <!--first form-->
-            <div class="title-form">
-                <h4>pergunta 2</h4>
-                <ion-icon name="open-outline" id="open-icon"></ion-icon>
-            </div>
-            <input type="text" placeholder="Texto da pergunta">
-            <input type="text" placeholder="Cor de fundo da pergunta">
-            <!--second form-->
-            <div class="title-form">
-                <h4>Resposta correta</h4>
-            </div>
-            <input type="text" placeholder="Resposta correta">
-            <input type="text" placeholder="URL da imagem">
-            <!--third form-->
-            <div class="title-form">
-                <h4>Respostas incorretas</h4>
-            </div>
-            <input type="text"  placeholder="Resposta incorreta 1">
-            <input type="text"  placeholder="URL da imagem 1">
-            <br>
-            <br>
-            <input type="text"  placeholder="Resposta incorreta 2">
-            <input type="text"  placeholder="URL da imagem 2">
-            <br>
-            <br>
-            <input type="text"  placeholder="Resposta incorreta 3">
-            <input type="text"  placeholder="URL da imagem 3">
-            <br>
-            <br>
-        </form>
-        <form class="question">
-            <!--first form-->
-            <div class="title-form">
-                <h4>Pergunta 3</h4>
-                <ion-icon name="open-outline" id="open-icon"></ion-icon>
-            </div>
-            <input type="text" placeholder="Texto da pergunta">
-            <input type="text" placeholder="Cor de fundo da pergunta">
-            <!--second form-->
-            <div class="title-form">
-                <h4>Resposta correta</h4>
-            </div>
-            <input type="text" placeholder="Resposta correta">
-            <input type="text" placeholder="URL da imagem">
-            <!--third form-->
-            <div class="title-form">
-                <h4>Respostas incorretas</h4>
-            </div>
-            <input type="text" placeholder="Resposta incorreta 1">
-            <input type="text" placeholder="URL da imagem 1">
-            <br>
-            <br>
-            <input type="text" placeholder="Resposta incorreta 2">
-            <input type="text" placeholder="URL da imagem 2">
-            <br>
-            <br>
-            <input type="text" placeholder="Resposta incorreta 3">
-            <input type="text" placeholder="URL da imagem 3">
-            <br>
-            <br>
-        </form>
-        <div id="btn-container">
-            <button id="finish-btn" onclick="finishQuizz()">Finalizar quiz</button>
-        </div>
-    </section>
+        <section class="area-question">
+            <p>Crie suas perguntas</p>
+        </section>
+    </div>
+    <!--Fim - HTML TELA 3.2-->
 
-    <section id="quizzlvl">
+    <!--Começo - HTML TELA 3.3-->
+    <div class="quizzlvl">
         <header>
             <h1>BuzzQuizz</h1>
         </header>
-        <h4>Agora, decida os níveis</h4>
-        <form>
-            <!--first level form-->
-            <div class="title-form">
-                <h4>Nível 1</h4>
-                <ion-icon name="open-outline" id="open-icon"></ion-icon>
-            </div>
-            <input type="text" placeholder="Titulo do nível">
-            <input type="text" placeholder="Porcentagem de acerto mínima">
-            <input type="text" placeholder="URL da imagem do nível">
-            <textarea class="text-box" cols="30" rows="10"></textarea>
-        </form>
-            <!--second level form-->
-            <form>
-                <div class="title-form">
-                    <h4>Nível 2</h4>
-                    <ion-icon name="open-outline" id="open-icon"></ion-icon>
-                </div>
-                <input type="text" placeholder="Titulo do nível">
-                <input type="text" placeholder="Porcentagem de acerto mínima">
-                <input type="text" placeholder="URL da imagem do nível">
-                <textarea class="text-box" cols="30" rows="10"></textarea>
-            </form> <!--third level form-->
-        <form>
-            <div class="title-form">
-                <h4>Nível 3</h4>
-                <ion-icon name="open-outline" id="open-icon"></ion-icon>
-            </div>
-            <input type="text" placeholder="Titulo do nível">
-            <input type="text" placeholder="Porcentagem de acerto mínima">
-            <input type="text" placeholder="URL da imagem do nível">
-            <textarea class="text-box" cols="30" rows="10"></textarea>
-        </form>
+        <section class="area-level">
+            <p>Agora, decida os níveis</p>
+        </section>
+    </div>
+    <!--Fim - HTML TELA 3.3-->
 
-    </section>
-
-    <section id="done-quizz">
+    <!--Começo - HTML TELA 3.4-->
+    <div class="done-quizz">
         <header>
             <h1>BuzzQuizz</h1>
         </header>
-        <h4>Seu quizz está pronto</h4>
-        <div id="background-container">
-            <div id="background"></div>
-        </div>
-        <div id="btn-container">
-            <button id="send-quizzbtn" class="btn">
-                Acessar Quizz
-            </button>
-            <button id="cancel-quizzbtn" class="btn">
-                Voltar para home
-            </button>
-        </div>
-    </section>
-    <!--Fim - HTML Yves-->
+        <section class="area-done">
+            <p>Seu quizz está pronto!</p>
+            <div class="image-quizz">
+                <h2></h2>
+            </div>
+            <div>
+                <button>Acessar Quizz</button>
+                <button onclick="location.reload()">Voltar pra home</button>
+            </div>
+        </section>
+    </div>
+    <!--Fim - HTML TELA 3.4-->
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
